pootle/static/css/style.css
/* ... */
.overview-description-toggle
{
    display: block;
    margin-top: 0.5em;
    text-align: right;
}

html[dir="rtl"] .overview-description-toggle
{
    text-align: left;
}

#overview-description-tp,
#overview-description-project,
#overview-description-language
{
    margin: 1em 0;
}

/* Inline editing */

.markup-body
{
    line-height: 1.35;
}

.markup-body:hover .js-edit-details
{
    visibility: visible;
}

.js-edit-details
{
    background: #fe0;
    padding: 0.1em 0.5em;
    border: 1px dotted #0489b7;
}

/*
 * HEADER
 */

.header
{
    padding: 0 1.5em;
}

#header-tabs
{
    border-bottom: 1px solid #D9D9D9;
}

#header-meta
{
    line-height: 2;
    border-bottom: none;
}

/*
 * HEADER STATS
 */

#top-stats
{
    padding-bottom: 2em;
    padding-top: 0.2em;
}

#top-stats .label
{
    margin-top: -1.1em;
    width: 8em;
    padding-bottom: 0.5em;
}

#top-stats a
{
    position: relative;
}

.icon-collapse-stats,
.icon-expand-stats
{
    display: inline-block;
    position: absolute;
    top: -4px;
    left: -11px;
    z-index: 1;
}

#progressbar
{
    margin-left: 10px;
    position: relative;
}

#progressbar table.graph
{
    width: 100%;
    position: absolute;
}

.path-summary-more
{
    padding: 0 2em;
    display: none;
    border: 1px solid #d9d9d9;
    background: #f4f4f4;

    border-radius: 0 0 5px 5px;
}

.path-summary-more table.stats
{
    width: 40em;
}

.path-summary-more table.last
{
    width: 90em;
}

.path-summary-more td.stats-number
{
    padding-right: 3em !important;
}


/* Breadcrumbs */

.breadcrumb
{
    font-size: 1.5em;
    font-weight: normal;
    font-family: webfont_light, 'Helvetica Neue', Helvetica, Helvetica, Arial, sans-serif;
    visibility: hidden;
    margin-left: -5px;
    padding-top: 5px;
    min-height: 2.05em;
    display: inline-block;
}

/* By default (on small screens), place resource dropdown on the second line */
#js-breadcrumb-resource
{
    display: block;
}

/* When browser window is wide enough, force breadcrumbs to be on the single line */
@media screen and (min-width: 1350px)
{
    .breadcrumb
    {
        white-space: nowrap;
        overflow: hidden;
    }

    #js-breadcrumb-resource
    {
        display: inline-block;
    }
}

.breadcrumb li
{
    display: inline-block;
    margin-left: 0.3em;
}

.breadcrumb li.hide
{
    display: none;
}

.breadcrumb li:first-child:before
{
    margin-left: 0;
    content: normal;
}

/* select2 dropdown widgets in breadcrumbs */

.breadcrumb .select2-container .select2-choice,
.unit-sort .select2-container .select2-choice
{
    height: auto;
    padding: 0 0 0 4px;
}

.breadcrumb .select2-container .select2-choice
{
    line-height: 44px;
}

.breadcrumb .navigation .select2-choice,
.unit-sort .navigation .select2-choice
{
    color: #0489b7;
}

.breadcrumb .select2-container .select2-choice div
{
    top: 8px;
}

.breadcrumb .select2-container .select2-choice abbr
{
    top: 15px;
    right: 22px;
}

/* HACK: display background as a thin line */
.breadcrumb-dropdown .select2-result-unselectable
{
    height: 1px;
    margin: 0.5em;
}

.breadcrumb-dropdown .select2-result-unselectable .select2-result-label
{
    cursor: default;
}
/* END HACK */

.select2-results .folder
{
    font-weight: bold;
}

.select2-result-label .text
{
    margin-left: 0.3em;
}

.select2-result-label
{
    white-space: nowrap;
}

.select2-result-label .file
{
    margin-left: 1.5em;
}

.select2-resource-root .file
{
    margin-left: auto;
}

.select2-match
{
    color: #000;
    background-color: rgba(255, 255, 0, 0.5);
}

.select2-results .select2-result.admin
{
    color: #c30;
}

.select2-results .select2-highlighted.admin
{
    background-color: #c30;
    color: #fff;
}

/* Tabs */

#tabs
{
    height: 34px;
}

#tabs li
{
    float: left;
}

html[dir="rtl"] #tabs li
{
    float: right;
}

#tabs a
{
    background-color: inherit;
    border: 1px solid transparent;
    color: #999;
    display: block;
    height: 30px;
    line-height: 2.2;
    margin: 3px 4px 0;
    padding: 0 11px;
    text-decoration: none;
}

#tabs a:hover
{
    /* TODO: merge with active tabs */
    background-color: #fff !important;
    border-color: #d9d9d9 #d9d9d9 #fff;
    border-style: solid;
}

#tabs a.admintab,
#tabs.admin a,
#tabs a .admin
{
    color: #c30 !important;
}

body#dashboard #tabs a.dashboard,
body#settings #tabs a.settings,
body#profile #tabs a.profile,
body#password #tabs a.password,
body#admindashboard #tabs a.admindashboard,
body#admingeneral #tabs a.admingeneral,
body#adminusers #tabs a.adminusers,
body#adminlanguages #tabs a.adminlanguages,
body#adminprojects #tabs a.adminprojects,
body#adminpermissions #tabs a.adminpermissions,
body#adminstaticpages #tabs a.adminstaticpages,
body#evernote_account #tabs a.evernote_account_link,
body#evernote_reports #tabs a.evernote_reports
{
    background-color: #fff;
    border-color: #d9d9d9 #d9d9d9 #fff;
    border-style: solid;
    color: #444;
    font-weight: bold;
}

.title a
{
    unicode-bidi: embed;
}


/* SEARCH */

#search
{
    display: inline-block;
}

#search-form
{
    position: relative;
    padding: 2px;

    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.075) inset;
}

#search-form,
.search-container
{
    background-color: #fff;
    border: 1px solid #d9d9d9;
    border-radius: 3px;
}

#search-form.focused,
.search-container
{
    box-shadow: 0 0 2px #d9d9d9;
}

.search-wrapper
{
    font-size: 0;
    white-space: nowrap;
}

.search-wrapper input[type="text"],
.search-wrapper .btn-search
{
    vertical-align: middle;
}

#search-form input[type="text"]
{
    border: 0 none;
    height: 16px;
    line-height: 16px;
    padding: 0px 4px;
    width: 145px;
    background-color: #fff;
    color: #666;
    font-size: 12px;
    outline: 0;
}

#search-form input[type="text"]:focus
{
    color: #000;
}

.btn-search
{
    padding: 0;

    min-width: inherit;
    min-height: inherit;
    border: 0 none;

    box-shadow: none;

    border-radius: 0;
}
/* ... */

